Fixed brand logo in layout break, updated changelog

--- a/web/assets/stylesheets/application.css
+++ b/web/assets/stylesheets/application.css
@@ -524,6 +524,7 @@ img.smallogo {
 
   .navbar .navbar-brand {
     float: none;
+    display: block;
   }
 
   .navbar ul.nav li a {
